[project]
name = "gaze-sync-meter"
version = "0.1.0"
description = "Offline multimodal talking-head quality benchmark for gaze, expression, posture, and lip-sync coherence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.15.13",
]

[project.scripts]
gaze-sync-meter = "gaze_sync_meter.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
